# es-diff

./: README.md  THIRD_PARTY_LICENSES.md  es-diff.py  es_diff.py  pyproject.toml  requirements.txt
es_diff/: cli.py
