[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "es-diff"
version = "1.0.0"
description = "Compare two Elasticsearch indices and output differences to CSV"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "deepdiff==8.5.0",
  "elasticsearch5==5.5.6",
  "tqdm==4.67.1",
]

[project.scripts]
es-diff = "es_diff:main"

[project.urls]
"Homepage" = "https://github.com/huseyingokdag/es-diff"
"Bug Tracker" = "https://github.com/huseyingokdag/es-diff/issues"
