[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "es-diff"
dynamic = ["version"]
description = "Compare two Elasticsearch indices and output differences to CSV"
authors = [
  { name = "Huseyin Gokdag", email = "hsyngkdg@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "deepdiff==8.5.0",
  "elasticsearch5==5.5.6",
  "tqdm==4.67.1",
]

[project.scripts]
es-diff = "es_diff.cli:main"

[project.urls]
homepage = "https://github.com/huseyingokdag/es-diff"
bugtracker = "https://github.com/huseyingokdag/es-diff/issues"

[tool.setuptools.dynamic]
version = { attr = "es_diff.version.__version__" }